--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,11 +238,12 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
+  background: url("../img/image.png") top center;
+  background-size: contain;
 }
 
 #hero:before {
